--- a/index.html
+++ b/index.html
@@ -44,13 +44,15 @@
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right margin-top cl-effect-2">
-                    <li><a href="index.html"><span data-hover="首页">首页</span></a></li>
+                    <li><a href="#"><span data-hover="首页">首页</span></a></li>
                     <li><a href="lineorder.html"><span data-hover="路线定制">路线定制</span></a></li>
                     <li><a href="about.html"><span data-hover="关于我们">关于我们</span></a></li>
                     <li><a href="youji.html"><span data-hover="游记">游记</span></a></li>
                     <li><a href="contact.html"><span data-hover="联系我们">联系我们</span></a></li>
                 </ul>
-                <button type="button" class="btn btn-default btn-sm" id="logbtn"><a href="LoginAndRegister.html">登录/注册</a></button>
+                <button class="btn btn-default btn-sm" id="logbtn">
+                    <span>登录/注册</span>
+                </button>
                 <div class="clearfix"></div>
             </div>
         </div>
@@ -247,7 +249,7 @@
                     <input type="text" placeholder="邮箱" required="">
                     <input type="text" placeholder="提交" required="">
                     <textarea placeholder="联系内容" required=""></textarea>
-                    <input type="submit" value="发送" style="color:#919191;opacity:0.8">
+                    <input type="submit" value="发送" style="background:#71c6c1;">
                 </form>
             </div>
             <div class="clearfix"> </div>
@@ -270,6 +272,10 @@
 <script>
     $(".carousel").carousel({
         interval:4000
+    })
+
+    $('#logbtn').click(function () {
+        window.location = 'LoginAndRegister.html'
     })
 </script>
 </body>
