--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,11 @@
                     <li><a href="lineorder.html"><span data-hover="路线定制">路线定制</span></a></li>
                     <li><a href="about.html"><span data-hover="关于我们">关于我们</span></a></li>
                     <li><a href="youji.html"><span data-hover="游记">游记</span></a></li>
-                    <li><a href="contact.html"><span data-hover="联系我们">联系我们</span></a></li>
+                    <li><a href="#"><span data-hover="联系我们">联系我们</span></a></li>
                 </ul>
-                <button type="button" class="btn btn-default btn-sm" id="logbtn"><a href="LoginAndRegister.html">登录/注册</a></button>
+                <button class="btn btn-default btn-sm" id="logbtn">
+                    <span>登录/注册</span>
+                </button>
                 <div class="clearfix"></div>
             </div>
         </div>
@@ -44,12 +46,12 @@
              <div class="col-md-6 mail-grid-left">
                 <h3>地址</h3>
                 <h5>天津市北辰区光荣道409号津霸公路东口天津商业大学</h5>
-                <h4>工作时间</h4>
+                <h4 class="title">工作时间</h4>
                 <p>业务办理时间为上午9点到下午6点
                 <span>法定节假日休息</span>
                客服早上9点到晚上7点在线
                 </p>
-                <h4>联系方式</h4>
+                <h4 class="title">联系方式</h4>
                 <p>电话号码: +1 33 225 8791
                 <span>合作邮箱:278097089@qq.com</span>
                 工作邮箱: <a href="yangshuya_12@126.com">yangshuya_12@126.com</a>
@@ -81,5 +83,11 @@
     </div>
     <!--footer-end-->
 </div>
+<script src="js/jquery.min.js"></script>
+<script>
+    $('#logbtn').click(function () {
+        window.location = 'LoginAndRegister.html'
+    })
+</script>
 </body>
 </html>
