--- a/youji.html
+++ b/youji.html
@@ -24,10 +24,12 @@
                     <li><a href="index.html"><span data-hover="首页">首页</span></a></li>
                     <li><a href="lineorder.html"><span data-hover="路线定制">路线定制</span></a></li>
                     <li><a href="about.html"><span data-hover="关于我们">关于我们</span></a></li>
-                    <li><a href="youji.html"><span data-hover="游记">游记</span></a></li>
+                    <li><a href="#"><span data-hover="游记">游记</span></a></li>
                     <li><a href="contact.html"><span data-hover="联系我们">联系我们</span></a></li>
                 </ul>
-                <button type="button" class="btn btn-default btn-sm" id="logbtn"><a href="LoginAndRegister.html">登录/注册</a></button>
+                <button class="btn btn-default btn-sm" id="logbtn">
+                    <span>登录/注册</span>
+                </button>
                 <div class="clearfix"></div>
             </div>
         </div>
@@ -223,5 +225,10 @@
 </div>
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.js"></script>
+<script>
+    $('#logbtn').click(function () {
+        window.location = 'LoginAndRegister.html'
+    })
+</script>
 </body>
 </html>
